update: stories
